tests/invalids/readStmt.gt
proc main ()
    int m;
begin
    read m := n;
end
